src/style/App.css
/* ... */
.category-input.stick {
  top: 56px;
  position: sticky;
  box-shadow: -10px 0 rgba(240, 240, 240), 10px 0 rgba(240, 240, 240);
}

@media (hover: hover) {
  .enabled-card:hover {
    transform: translateY(-3px);
    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
    background: #e9f2ff;
    cursor: pointer;
  }
}

.back-to-top {
  position: fixed;
  bottom: 10px;
  right: 10px;
  width: 64px;
  height: 64px;
  border-radius: 100%;
  background: black;
  color: white;
  text-align: center;
  line-height: normal;
  font-size: 10pt;
  cursor: pointer;
}

#top {
  visibility: hidden;
  height: 0px;
}

.nomination-flow div {
  transition: opacity 0.5s;
}

.nomination-flow > * {
  margin-bottom: 60px;
}

div.hidden {
  opacity: 0.4;
  cursor: default;
}

.selected-card {
  transition: all 2s;
}

.nomination-flow input:disabled {
  background-color: #fff !important;
}

.vertical-padding {
  margin-bottom: calc(56px + 20vh);
}

.input-clear {
  z-index: 30;
  position: absolute;
  top: 10px;
  right: 14px;
  color: grey;
}

.height-lg,
.controls button {
  height: 48px;
}

.input-clear:hover {
  color: black;
  cursor: pointer;
}

.category-input input {
  border-radius: 0.3rem !important;
}

.hidden .input-clear:hover {
  color: grey;
  cursor: default;
}

.goback {
  float: right;
}

input::placeholder {
  /* font-style: italic; */
  font-weight: 400;
  color: rgba(0, 0, 0, 0.5) !important;
}

.pad-top {
  margin-top: 20vh;
}

.submission-options .btn-primary,
.submission-options .btn-outline-primary {
  width: 100%;
  min-width: 200px;
}

.nomination-flow .form-group {
  margin-bottom: 36px;
}

.other-input .form-group {
  margin-bottom: 24px;
}

.other-input .preview {
  margin: 36px 0;
}

.other-input > :first-child,
.nomination-flow .form-row > div {
  margin-top: 24px;
}

#typeahead-container {
  margin: 32px 0;
}

.submission-options {
  width: fit-content;
  margin: 32px auto;
}

.form-group :not(.input-group-prepend, .input-group-append) button {
  margin-right: 16px;
}

.input-group-prepend + .extra-fields-info {
  border-top: none;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
  font-size: 14px;
  margin-top: -2px;
  padding-top: 6px;
  position: relative;
  z-index: 1;
  width: 100%;
  order: 100;
}

.input-group-prepend + .extra-fields-info + input {
  position: relative;
  z-index: 2;
  border-bottom-left-radius: 4px;
  border-bottom-right-radius: 0;
}

.field-input-controls {
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
  font-size: 14px;
  margin-bottom: -4px;
  padding-bottom: 8px;
}

@media (max-width: 767px) {
  #nomination-selection .form-row > div:first-child {
    margin-bottom: 24px;
  }

  .type-selection .card-list {
    flex-direction: column;
  }

  .type-selection .card {
    width: calc(100% - 16px);
    margin: 10px 8px;
  }

  .container {
    max-width: 94vw;
  }
}

.submission-alternatives {
  text-align: center;
}

.submission-alternatives > *:not(.btn-link) {
  margin: 12px auto 0 auto !important;
}

.input-group-lg input,
input.input-group-lg,
input.form-control-lg {
  font-size: 1rem !important;
  /* padding: 3px auto !important; */
  height: 48px !important;
}

.rbt-input-hint input {
  font-size: 1rem !important;
  padding-top: 11px !important;
}

.preview {
  width: 100%;
  height: fit-content;
  max-width: 400px;
  display: flex;
  justify-content: center;
}

.preview > .card {
  width: 100%;
}

#image-load {
  margin-top: 20px;
  z-index: 10;
  margin-bottom: 0;
}

#image-load .spinner {
  margin-bottom: -16px;
}

.inline-load {
  color: #212529 !important;
  margin: 0 !important;
  display: flex;
}

.inline-load .loading-children {
  margin: 0 !important;
  margin-left: 8px !important;
  display: flex;
}

.inline-load .loading-children > * {
  margin-left: 0.25rem;
}

.submit-progress .spinner {
  margin: 0 auto;
  margin-top: 2px;
}

.submit-progress .spinner > div {
  background-color: white !important;
  width: 12px !important;
  height: 12px !important;
  margin: 2px !important;
}

.submitting-btn {
  opacity: 1 !important;
}

.clear-nominees {
  margin-bottom: 40px;
}

.closed-page-indicator > h3 {
  margin-bottom: 1rem;
}

/* .extra-field-header {
  margin-top: 2rem;
  padding-top: 2rem;
  font-weight: normal;
  border-top: 1px solid rgba(0,0,0,0.1);
} */

.extra-field-header + p {
  margin-bottom: 2rem;
}

#step-two:not(.hidden) .submission-options.can-be-submitted {
  position: sticky;
  bottom: 1rem;
  z-index: 30;
}

#category-selection .submission-options.can-be-submitted button {
  border: 1px rgba(0, 0, 0, 0.5) solid;
}

#submit-step {
  padding-top: 1rem;
}

#submit-step button.btn {
  padding: 12px;
  margin-top: 10px;
  margin-right: 16px;
}

#submit-step ol li {
  margin-bottom: 8px;
}

.primary-text-color {
  color: #007bff;
}

/* #image-load {
  position: absolute;
  z-index: 10;
  background: #343a40;
  width: 100%;
  height: 100%;
}

#image-load {
  padding: 15% 5%;
}

#image-load h5 {
  color: #d5d5d5 !important;
  font-weight: bold;
}

.art-card #image-load {
  margin-top: 0;
}

.other-card #image-load {
  margin-bottom: 0;
} */

.shrink-me {
  margin-top: 2px;
  margin-bottom: -12px;
}

.form-text {
  transition: all 0.25s;
}

.label-invisible {
  opacity: 0;
  margin-bottom: -20px;
}

.label-error {
  color: red;
}

#art-input button[type='submit'] {
  /* margin-top: -20px; */
  margin-bottom: -10px;
}

.nominate-toggles .custom-switch {
  padding-left: 0;
}

.nominate-toggles > :not(:first-child) {
  margin-top: 12px;
}

.input-group-lg .input-group-text {
  font-size: 1rem !important;
}

*[disabled],
.hidden .card:hover,
.hidden button.close:hover,
.hidden .goback:hover {
  cursor: default !important;
}

.hidden .goback,
.hidden .goback:hover {
  text-decoration: none;
  color: #6c757d;
}

.button-disabled:hover {
  background-color: initial !important;
  cursor: default;
}
/* ... */

